# dotfiles

./: .gitignore  .gitmodules  MAPPING  Makefile  README.md  README.rst  TODO  ansible.cfg  autostart.sh  bootstrap.sh  check-aur-updates.sh  detect-missing-packages.py  dotbot  dotbot.yml  dotfiles.yml  drivers.yml  gitcfg  ideas.txt  install  install-packages.yml  install.sh  install.yml  maintenance.sh  packages.yml  playbook.yml  projector.sh  remove-unconfigured-packages.sh  requirements.txt  test-in-docker.sh  test.sh  update-aur-pkgs.sh  user.yml  variables.yml
_machines/: ares.yml  dionysus.yml  hades.yml  hera-tasks.yml  hera.yml  mars.yml  neptune.yml  notebook01.yml  tb-hak.yml
alacritty/: alacritty.toml.j2  alacritty.yml  alacritty.yml.j2
alacritty/themes/: monokai.toml
applications/: firefox.desktop
autostart/: 10_cleanup.sh  20_dunst.sh  20_gpg_agent.sh  20_screen.sh  20_xresources.sh  30_audio.sh  30_keyboard.sh  30_touchpad.sh  40_wallpaper.sh  50_bluetooth.sh  50_network.sh  50_nextcloud.sh  50_pasystray.sh  50_redshift.sh  autostart.sh  autostart.target.j2
autostart/autostart/: 20_xresources.sh  30_touchpad.sh  50_browser.sh  50_irc.sh  50_keyboard.sh  50_mail.sh  50_music.sh  50_network.sh  50_owncloud.sh  50_pasystray.sh  50_redshift.sh  50_screen.sh  50_synclient.sh  50_voip.sh  50_wallchanger.sh  50_xbindkeys.sh  50_xresources.sh  90_browser.sh  90_mail.sh  applications.sh  browser.sh  compositing.sh  irc.sh  keyboard.sh  mail.sh  music.sh  network.sh  owncloud.sh  pasystray.sh  redshift.sh  screen.sh  seafile.sh  synclient.sh  voip.sh  wallchanger.sh  wallpaper.sh  xbindkeys.sh  xresources.sh
autostart/services/: autostart.target  blueman.service  discord.service  dpms.service  dunst.service  element.service  firefox-gtk-override-bigger-font@.service  firefox.service  firefox@.service  gnome-keyring.service  gpg-agent.service  i3.service  kdeconnect.service  keepassx.service  keepassxc.service  keyboard.service  laptop-lid.service  mousespam.service  nextcloud.service  nm-applet.service  pasystray.service  redshift.service  restic.service  restic.timer  screencfg.service  signal.service  spotify.service  steam.service  touchpad.service  wallpaper.service  wallpaper.timer  windowmanager.target  workstation-mgr.service  xresources.service  yubikey-touch-detector.service
bash/: bash_aliases  bash_functions  bash_greeting  bash_profile  bash_prompt  bash_variables  bashrc
bookmarks/: sysop
cargo/: config.toml
conky/: clock.conkyrc  conkyrc
conky/conky/: clock.conkyrc  conkyrc
dunst/: dunstrc  dunstrc.j2
git/: gitconfig  gitconfig.j2  gitignore_global  gitk
gnupg/: dirmngr.conf  gpg-agent.conf  gpg-agent.conf.j2  gpg.conf  gpg.conf.j2  scdaemon.conf
gpgkeys/: hannes@hkoerber.de.gpg.asc
grm/: github.toml  personal_projects.toml
gtk/: gtk-3.0-bigger-font.ini.j2  gtk-3.0.ini  gtk-3.0.ini.j2  gtkrc-2.0  gtkrc-2.0.j2
helix/: config.toml  languages.toml
i3/: config  config.j2  i3status-rs.toml  i3status.conf  i3status.conf.j2
i3/i3/: .gitignore  config  genconfig.bash  i3bar_clickparser.bash  i3bar_parser.bash  i3bar_wrapper.bash  i3blocks.conf  i3status.conf
i3/i3/config.d/: netbook.config  notebook.config  virtualarch.config
i3/i3/conky/: netbook.conky  netbook.conkyrc  virtualarch.conky  virtualarch.conky.dzen  virtualarch.conkyrc
i3/i3/i3status.d/: netbook.conf  virtualarch.conf
i3/i3status-rust/: config.toml  config.toml.j2
i3/scripts/: appmenu  bar-update  i3exit  pa-volume  presentation-mode  shutdown-menu  spotify-control  start-presentation-mode  swap-from-workspace.sh  toggle-app
install_scripts/: ares-bootstrap.sh  ares.sh  bootstrap.sh  dionysus.sh  hades.sh  hera.sh  neptune.sh
mgr/: Cargo.toml
mgr/src/: brightness.rs  cli.rs  cmd.rs  dirs.rs  dmenu.rs  dunst.rs  env.rs  lib.rs  power.rs  present.rs  pulseaudio.rs  redshift.rs  sleep.rs  spotify.rs  systemd.rs  theme.rs  weather.rs
mgr/src/wire/: client.rs  mod.rs  server.rs  socket.rs
mpd/mpd/: mpd.conf  mpdconf
ncmpcpp/ncmpcpp/: bindings  config  keys
pkgbuilds/workstation-mgr/: PKGBUILD
qt/: qt5ct.conf
qutebrowser/: keys.conf  qutebrowser.conf
redshift/: redshift.conf
screencfg/: ares.sh  screencfg.toml
screencfg/ares/: default.yml
screencfg/mars/: default.yml
screencfg/neptune/: default.yml  three-screens-laptop-left.yml  three-screens-laptop-right.yml
screencfg/tb-hak/: three-screens.yml
scripts/: fix-aoe2.sh  garmin.sh  install-gothic.sh  install-gothic2.sh  makesymlinks.bash  setup.bash
services/: color-theme-dark.service  color-theme-light.service
setup/: list  packages-foreign.list  packages-native.list
terminator/terminator/: config
tmux/: tmux.conf
vim/: vimrc
vscode/: keybindings.json  settings.json
vscodium/: install.sh  keybindings.json  settings.json
x/: Xresources  Xresources.j2  xinitrc
x/xinitrc.d/: netbook.xinitrc  notebook.xinitrc  virtualarch.xinitrc
zsh/: zprofile  zprofile.j2  zshrc  zshrc.j2
zsh/zsh/: 20_aliases.sh  30_variables.sh  40_functions.sh  50_prompt.sh  aliases.sh  shellopts.sh
zsh/zshrc.d/: 10_shellopts.sh  20_aliases.sh  40_functions.sh  60_keybinds.sh  90_startup.sh
(+26 files in other folders)
